# flasher

./: README.md  com.github.mirkokral.flasher.json  meson.build
data/: com.github.mirkokral.flasher.desktop.in  com.github.mirkokral.flasher.gschema.xml  com.github.mirkokral.flasher.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  nexility.gresource.xml  window.cmb  window.ui  window.vala
